<resources>
    <string name="app_name">Hotel Manager</string>


    <string name="title_thongke">THỐNG KÊ DOANH THU</string>
    <string name="hint_tu_ngay">Từ Ngày</string>
    <string name="hint_den_ngay">Đến Ngày</string>
    <string name="hint_ten_dang_nhap">Tên Đăng Nhập</string>
    <string name="hint_mat_khau">Mật Khẩu</string>
    <string name="hint_ten_nguoi_dung">Tên Người Dùng</string>
    <string name="hint_xac_nhan_mat_khau">Xác Nhận Mật Khẩu</string>
    <string name="hint_ten_khach_hang">Tên khách hàng</string>
    <string name="hint_so_dien_thoai">Số điện thoại</string>
    <string name="hint_ngay_sinh">Ngày sinh</string>
    <string name="hint_ten_loai_dich_vu">Tên loại dịch vụ</string>
    <string name="hint_gia">Giá</string>
    <string name="hint_ten_phong">Tên phòng</string>
    <string name="hint_gia_phong">Giá phòng</string>
    <string name="hint_ten_loai_phong">Tên loại phòng</string>
    <string name="hint_mat_khau_moi">mật khẩu mới</string>
    <string name="hint_mat_khau_cu">Mật Khẩu Cũ</string>
    <string name="tv_doanh_thu_tong">Doanh thu tổng</string>
    <string name="tv_doanh_thu_dich_vu">Doanh thu dịch vụ</string>
    <string name="tv_doanh_thu_den_bu">Doanh thu đền bù</string>
    <string name="tv_dang_nhap">Đăng nhập</string>
    <string name="tv_dang_ki_neu_chua_co_tk">- Đăng ký tài khoản nếu chưa có -</string>
    <string name="tv_dang_nhap_neu_co_tk">- Đăng nhập nếu đã có tài khoản -</string>
    <string name="tv_dang_ki">Đăng ký Tài Khoản</string>
    <string name="tv_khach_hang">Khách hàng</string>
    <string name="tv_don_dich_vu">Đơn dịch vụ</string>
    <string name="tv_ngay_tao">Ngày tạo: </string>
    <string name="tv_hoa_don_cua">Hóa đơn của: </string>
    <string name="tv_loai_dich_vu">Loại dịch vụ: </string>
    <string name="tv_so_luong_dich_vu">Số lượng dịch vụ: </string>
    <string name="tv_tong_tien">Tổng tiền: </string>
    <string name="tv_them_loai_dich_vu">Thêm Loại Dịch Vụ</string>
    <string name="tv_loai_phong">Loại phòng</string>
    <string name="tv_hoa_don">Hóa Đơn</string>
    <string name="tv_ten_dich_vu">Tên dịch vụ</string>
    <string name="tv_phong">Phòng </string>
    <string name="tv_tien_phong">Tiền Phòng: </string>
    <string name="tv_tien_dich_vu">Tiền dịch vụ:</string>
    <string name="tv_tien_den_bu">Tiền đền bù :  </string>
    <string name="tv_vnd">VNĐ</string>
    <string name="tv_ghi_chu">Ghi Chú</string>
    <string name="tv_doi_mat_khau">Đổi Mật Khẩu</string>
    <string name="tv_ten_phong">Tên Phòng</string>
    <string name="tv_gia_phong">Giá Phòng</string>
    <string name="tv_ngay_dat_dich_vu">Ngày tạo: </string>
    <string name="tv_tu">Từ : </string>
    <string name="tv_den">Đến : </string>
    <string name="tv_da_tra_phong">Đã Trả Phòng</string>
    <string name="tv_chua_tra_phong">Chưa Trả Phòng</string>
    <string name="tv_ngay_sinh">Ngày Sinh : </string>
    <string name="tv_sua_khach_hang">SỬA KHÁCH HÀNG</string>
    <string name="title_login">Welcom to Nhom2 Holtel</string>

    <string name="btn_thong_ke">Thống Kê</string>
    <string name="btn_quay_lai">Quay Lại</string>
    <string name="btn_dang_ki">Đăng ký</string>
    <string name="btn_them">Thêm</string>
    <string name="btn_huy">Hủy</string>
    <string name="btn_tim">Tìm</string>
    <string name="btn_doi_mat_khau">Đổi Mật Khẩu</string>
    <string name="btn_dang_xuat">Đăng Xuất</string>
    <string name="btn_ngon_ngu">Ngôn Ngữ</string>
    <string name="btn_nhan_phong">Nhận Phòng</string>
    <string name="btn_cap_nhat">CẬP NHẬT</string>

    <string name="cbo_luu_mat_khau">Lưu Mật Khẩu</string>
    <string name="cbo_da_tra_phong">Đã trả phòng</string>

    <string name="notification_xac_nhan_huy">Bạn có muốn hủy đơn không</string>
    <string name="notification_xac_nhan_nhan_phong">Xác nhận nhận phòng</string>
    <string name="toast_huy_thanh_cong">Hủy thành công</string>
    <string name="toast_huy_that_bai">Hủy thất bại</string>
    <string name="toast_nhan_thanh_cong">Nhận phòng thành công</string>
    <string name="toast_loi_nhan">Lỗi nhận phòng</string>
    <string name="toast_chua_den_ngay">Chưa đến ngày nhận phòng</string>
    <string name="toast_value_date">Không được để trống</string>
    <string name="toast_value_date_date">Không đúng định dạng ngày</string>
    <string name="toast_cap_nhat_thanh_cong">Cập nhật thành công</string>
    <string name="toast_cap_nhat_khong_thanh_cong">Cập nhật thất bại</string>
    <string name="don_dich_vu">Đơn dịch vụ</string>
    <string name="loai_dich_vu">Loại dịch vụ</string>

    <string-array name="trang_thai_hd">
        <item>Chưa nhận phòng</item>
        <item>Chưa trả phòng</item>
        <item>Đã trả phòng</item>
    </string-array>
</resources>