<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgitem">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/lavender"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:layout_margin="16dp"
            android:src="@drawable/ic_round_account_circle_24"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tv_dang_ki"
            android:textColor="@color/dark_blue"
            android:textSize="30dp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_Name_Register"
                    android:hint="@string/hint_ten_nguoi_dung"
                    tools:ignore="Autofill,HardcodedText,TextFields" />

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_ten_dang_nhap"
                   tools:ignore="Autofill,HardcodedText,TextFields"
                   android:id="@+id/edt_User_Name_Register"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_Password_Register"
                    android:hint="@string/hint_mat_khau"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,HardcodedText,TextFields" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_RePassword"
                    android:hint="@string/hint_xac_nhan_mat_khau"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,HardcodedText,TextFields" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_register"
            android:text="@string/btn_dang_ki"
            android:backgroundTint="@color/lavender"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_dang_nhap_neu_co_tk"
            android:textAlignment="center"
            android:textColor="@color/blue"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</LinearLayout>