<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/lavender"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/title_login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dang_nhap"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_marginBottom="15dp"
        tools:ignore="HardcodedText" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_User_Name"
                android:hint="@string/hint_ten_dang_nhap"
                tools:ignore="Autofill,HardcodedText,TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_Password"
                android:hint="@string/hint_mat_khau"
                android:inputType="textPassword"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/chk_login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/cbo_luu_mat_khau"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/lavender"
        android:id="@+id/btn_login"
        android:text="@string/tv_dang_nhap"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_dang_ki_neu_chua_co_tk"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />
</LinearLayout>