<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgitem"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/tv_doi_mat_khau"
        android:background="@color/magenta"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_ten_dang_nhap"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_TenDN"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_mat_khau_cu"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_mkcu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_mat_khau_moi"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_mkmoi"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_doimk"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_doi_mat_khau"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:backgroundTint="#7CB342"
        android:layout_gravity="center"
        />
</LinearLayout>