<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:background="@color/bgitem"
    android:layout_margin="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bgitem"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_don_dich_vu"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/magenta"
            />

        <TextView
            android:id="@+id/dialog_tv_ngay_tao_don_dv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ngay_tao"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_hoa_don_cua"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/dialog_spn_hoa_don"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_loai_dich_vu"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_margin="10dp"/>
            <Spinner
                android:id="@+id/dialog_spn_dich_vu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_so_luong_dich_vu"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/ed_so_luong_dv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:id="@+id/dialog_tv_tong_tien_don_dv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_tong_tien"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:layout_weight="9"
                android:layout_margin="10dp"/>
            <ImageButton
                android:id="@+id/btn_refresh_don_dv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_refresh_24"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="2">
            <Button
                android:id="@+id/dialog_btn_them_don_dv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/lavender"
                android:layout_marginRight="10dp"
                android:text="@string/btn_them"/>
            <Button
                android:id="@+id/dialog_btn_huy_don_dv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_huy"
                android:backgroundTint="@color/dark_gray"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
