<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/bgitem"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/item_phong_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_ten_phong"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/item_phong_loaiphong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_loai_phong"
            android:layout_marginLeft="10dp"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/item_phong_giaphong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_gia_phong"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right">
<!--            <Button-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="35dp"-->
<!--                android:backgroundTint="#7CB342"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="đặt phòng"-->
<!--                android:textStyle="bold"-->
<!--                android:id="@+id/btn_datphong"-->
<!--                android:shadowRadius="5" -->
<!--                />-->
            <ImageView
                android:id="@+id/id_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>