<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.FragmentSetting"
    android:id="@+id/fragment_setting">

    <LinearLayout
        android:id="@+id/btnThongKe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_item_setting"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_thongke"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/lavender"
            android:layout_marginHorizontal="10dp"
            android:text="@string/btn_thong_ke" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDoiMatKhau"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_item_setting"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_doi_mat_khau"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/lavender"
            android:layout_marginHorizontal="10dp"
            android:text="@string/btn_doi_mat_khau" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_lang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_item_setting"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_ngon_ngu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/lavender"
            android:layout_marginHorizontal="10dp"
            android:text="@string/btn_ngon_ngu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_item_setting"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_dang_xuat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/lavender"
            android:layout_marginHorizontal="10dp"
            android:text="@string/btn_dang_xuat" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>